Fix login button text align

--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ textarea:-ms-input-placeholder {
 
   height: 33px;
   margin-bottom: 4px;
-  padding: 8px 16px 9px 43px;
+  padding: 9px 16px 9px 43px;
 
   text-decoration: none;
 
